--- a/src/app/tabs/styles/profile.css
+++ b/src/app/tabs/styles/profile.css
@@ -35,6 +35,7 @@
 }
 
 .__main_profile .__section_avatar .__avatar {
+    position: relative;
     width: 160px;
     height: 160px;
     margin: auto;
@@ -42,12 +43,56 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    aspect-ratio: 1/1;
+    object-fit: cover;
 }
 
 .__main_profile .__section_avatar .__avatar img {
     display: none;
 }
 
+.__main_profile .__section_avatar .__avatar .__edit {
+    position: absolute;
+    display: grid;
+    width: 50px;
+    height: 50px;
+    bottom: 0;
+    right: 0;
+    cursor: pointer;
+    place-items: center;
+    border-radius: 100px;
+    border: 1px solid var(--color-border);
+    background-color: var(--color-white);
+}
+
+.__main_profile .__section_avatar .__avatar .__edit .tabler-icon {
+    stroke: var(--color-dark);
+}
+
+.__main_profile .__section_avatar .__crop_modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+.__main_profile .__section_avatar .__crop_modal .__btn_crop_confirm {
+    position: absolute;
+    display: grid;
+    width: 50px;
+    height: 50px;
+    bottom: 60px;
+    place-items: center;
+    border-radius: 100px;
+    background-color: var(--color-white);
+    border: 1px solid var(--color-border);
+}
 
 .__main_profile .__section_info {
     padding: 1rem;
