--- a/src/components/products/styles/filters.css
+++ b/src/components/products/styles/filters.css
@@ -14,6 +14,7 @@
     display: grid;
     cursor: pointer;
     font-size: .8rem;
+    text-wrap: nowrap;
     place-items: center;
     padding: .5rem 1rem;
     border-radius: 100px;
